file(GLOB lib_srcs ${CMAKE_CURRENT_SOURCE_DIR}/**.cpp)
file(GLOB srcs ${CMAKE_CURRENT_SOURCE_DIR}/*/**.cpp)

add_library(cppship_lib ${lib_srcs} ${srcs})
set_target_properties(cppship_lib PROPERTIES OUTPUT_NAME "cppship")

target_include_directories(cppship_lib PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(cppship_lib PUBLIC ${CMAKE_SOURCE_DIR}/include)

find_package(Boost 1.81.0 REQUIRED)
find_package(fmt REQUIRED)
find_package(range-v3 REQUIRED)
find_package(bshoshany-thread-pool REQUIRED)
find_package(Microsoft.GSL REQUIRED)
find_package(toml11 REQUIRED)
find_package(spdlog REQUIRED)
find_package(argparse REQUIRED)

target_link_libraries(cppship_lib PUBLIC Boost::headers)
target_link_libraries(cppship_lib PUBLIC fmt::fmt)
target_link_libraries(cppship_lib PUBLIC range-v3::range-v3)
target_link_libraries(cppship_lib PUBLIC bshoshany-thread-pool::bshoshany-thread-pool)
target_link_libraries(cppship_lib PUBLIC Microsoft.GSL::GSL)
target_link_libraries(cppship_lib PUBLIC toml11::toml11)
target_link_libraries(cppship_lib PUBLIC spdlog::spdlog)
target_link_libraries(cppship_lib PUBLIC argparse::argparse)